# Ishiiruka-emu-nogui

./: CMakeLists.txt
Source/Core/Common/: CMakeLists.txt
Source/Core/Common/GL/: GLContext.cpp
Source/Core/Common/GL/GLInterface/: EGL.cpp  EGLDRM.cpp
Source/Core/Core/: CMakeLists.txt  Host.h
Source/Core/DiscIO/: CMakeLists.txt
Source/Core/DolphinNoGUI/: CMakeLists.txt  MainNoGUI.cpp  PlatformDRM.cpp
Source/Core/VideoBackends/: CMakeLists.txt
Source/Core/VideoBackends/Software/: EfbCopy.cpp  EfbCopy.h
Source/Core/VideoCommon/: MainBase.cpp  VideoBackendBase.cpp
Source/UnitTests/: StubHost.cpp
